@@ -1,3 +1,8 @@
+2006-01-26  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c, shapefil.h, shpdump.c: Added bMeasureIsUsed support as
+	per http://bugzilla.maptools.org/show_bug.cgi?id=1249
+	
 2006-01-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* dbfopen.c/shapefil.h: Added functions to check if dbf record is
